@@ -8,6 +8,12 @@
 
 $wgSpecialPagesManagerUpdaterMessages['en'] = array(
 	'specialpagesmanagerupdater' => 'BizzWiki Special Pages Updater',
-	#'' => '',
+	'specialpagesmanagerupdater_confirm' => 'Are you sure you want to update?',
+	'specialpagesmanagerupdater_button'  => 'Confirm Update',
+	'specialpagesmanagerupdater_success' => 'The operation was successful',
+	'specialpagesmanagerupdater_failure' => 'The operation was a failure',
+	'specialpagesmanagerupdater_looklog' => 'Look at [[Special:Log]] for additional details',	
+	'specialpagesmanagerupdater_source'  => 'The files from the directory <b>$1</b> will be used.',
+	#'specialpagesmanagerupdater' => '',
 );
 ?>
