@@ -74,3 +74,5 @@ REL1_10_4:
 - Adjusted 'revision id' information provided through extension credits (Special:Version) on most extensions
 - Fixed 'SidebarEx' extension for 'garbage' appearing when 'Sidebar/$group' page does not exist
 - Added 'undelete' as namespace independant right for addressing 'Special:Undelete' use-cases
+- Fixed 'Pager.php' to support 'page_namespace' related queries as well as 'user' table related ones
+-- Addresses 'Special:Listusers' special page issue
